# BCLONAN-USDS-TAKEHOME-SCRIPTS

./: .gitignore  ASSESSMENT_README.md  README.md  assesment.md  context  ecfr_scraper.py  manifest.json  pyproject.toml
data/: processing_summary.json  title1.min.min.xml  title1.min.xml  title1.xml.metadata.json  title10.xml.metadata.json  title11.json  title11.min.min.xml  title11.min.xml  title11.xml.metadata.json  title12.xml.metadata.json  title13.json  title13.min.min.xml  title13.min.xml  title13.xml.metadata.json  title14.xml.metadata.json  title15.json  title15.xml.metadata.json  title16.json  title16.xml.metadata.json  title17.xml.metadata.json  title18.json  title18.xml.metadata.json  title19.xml.metadata.json  title2.json  title2.min.min.xml  title2.min.xml  title2.xml.metadata.json  title20.xml.metadata.json  title21.xml.metadata.json  title22.json  title22.xml.metadata.json  title23.json  title23.min.min.xml  title23.min.xml  title23.xml.metadata.json  title24.xml.metadata.json  title25.xml.metadata.json  title26.xml.metadata.json  title27.xml.metadata.json  title28.xml.metadata.json  (+51 more)
ecfr_scraper/: __init__.py  api.py  cli.py  metadata.py  normalize.py  pipeline.py  scraper.py  storage.py  utils.py
notebooks/: ECFR_Scraper_Tutorial.ipynb
scripts/: batch_normalize.py  cleanup_artifacts.py  minify_ecfr_xml.py  validate_json.py  validate_xml.py
test_out/: title1.json
tests/: test_analyzer_ingest_metrics.py  test_api_search.py  test_enrich_index.py  test_normalize.py  test_numbers_not_null.py  test_pipeline_registry.py  test_validate_json.py
(+8 files in other folders)
